generated-out/vanilla/dear-imgui-raw-vanilla/cbits/dcimgui_nodefaultargfunctions.h


typedef struct ImVec2_t ImVec2;
typedef unsigned int ImGuiID;      
typedef unsigned int ImU32;        
typedef struct ImGuiStyle_t ImGuiStyle;                                        
typedef struct ImGuiTableSortSpecs_t ImGuiTableSortSpecs;                      
typedef int ImGuiDataType;        
typedef int ImGuiTableBgTarget;   
typedef int ImGuiInputFlags;        
typedef int ImGuiKeyChord;          
typedef int ImGuiSliderFlags;       
typedef int ImGuiTabItemFlags;      
typedef int ImGuiTableColumnFlags;  
typedef int ImGuiTableRowFlags;     
typedef int ImGuiTreeNodeFlags;     
CIMGUI_API void        ImGui_ShowDemoWindow(bool* p_open );         
CIMGUI_API void        ImGui_ShowMetricsWindow(bool* p_open );      
CIMGUI_API void        ImGui_ShowDebugLogWindow(bool* p_open );     
CIMGUI_API void        ImGui_ShowIDStackToolWindow(bool* p_open );  
CIMGUI_API void        ImGui_ShowAboutWindow(bool* p_open );        
CIMGUI_API void        ImGui_ShowStyleEditor(ImGuiStyle* ref );     
CIMGUI_API bool        ImGui_ShowStyleSelector(const char* label);              
CIMGUI_API void        ImGui_ShowFontSelector(const char* label);               
CIMGUI_API void        ImGui_ShowUserGuide(void);                               
CIMGUI_API void ImGui_StyleColorsDark(ImGuiStyle* dst );     
CIMGUI_API void ImGui_StyleColorsLight(ImGuiStyle* dst );    
CIMGUI_API void ImGui_StyleColorsClassic(ImGuiStyle* dst );  
CIMGUI_API void  ImGui_Spacing(void);                          
CIMGUI_API void  ImGui_Unindent(float indent_w );  
CIMGUI_API void ImGui_TextUnformatted(const char* text, const char* text_end );        
CIMGUI_API bool ImGui_SmallButton(const char* label);                                                          
CIMGUI_API bool ImGui_TextLink(const char* label);                                                             
CIMGUI_API bool ImGui_TextLinkOpenURL(const char* label, const char* url );                        
CIMGUI_API bool ImGui_SliderFloat(const char* label, float* v, float v_min, float v_max, const char* format , ImGuiSliderFlags flags );                                                        
CIMGUI_API bool ImGui_SliderFloat2(const char* label, float v[2], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderFloat3(const char* label, float v[3], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderFloat4(const char* label, float v[4], float v_min, float v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderAngle(const char* label, float* v_rad, float v_degrees_min , float v_degrees_max , const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt(const char* label, int* v, int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt2(const char* label, int v[2], int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt3(const char* label, int v[3], int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderInt4(const char* label, int v[4], int v_min, int v_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderScalar(const char* label, ImGuiDataType data_type, void* p_data, const void* p_min, const void* p_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool ImGui_SliderScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_min, const void* p_max, const char* format , ImGuiSliderFlags flags );
CIMGUI_API bool  ImGui_TreeNode(const char* label);
CIMGUI_API bool  ImGui_TreeNodeEx(const char* label, ImGuiTreeNodeFlags flags );
CIMGUI_API void  ImGui_TreePush(const char* str_id);                                                                            
CIMGUI_API void  ImGui_TreePushPtr(const void* ptr_id);                                                                         
CIMGUI_API void  ImGui_TreePop(void);                                                                                           
CIMGUI_API bool  ImGui_TreeNodeGetOpen(ImGuiID storage_id);                                                                     
CIMGUI_API void ImGui_PlotLinesCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_PlotHistogramCallback(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset , const char* overlay_text , float scale_min , float scale_max , ImVec2 graph_size );
CIMGUI_API void ImGui_TableNextRow(ImGuiTableRowFlags row_flags , float min_row_height ); 
CIMGUI_API bool ImGui_TableNextColumn(void);              
CIMGUI_API bool ImGui_TableSetColumnIndex(int column_n);  
CIMGUI_API void ImGui_TableSetupColumn(const char* label, ImGuiTableColumnFlags flags , float init_width_or_weight , ImGuiID user_id );
CIMGUI_API void ImGui_TableSetupScrollFreeze(int cols, int rows);  
CIMGUI_API void ImGui_TableHeader(const char* label);              
CIMGUI_API void ImGui_TableHeadersRow(void);                       
CIMGUI_API void ImGui_TableAngledHeadersRow(void);                 
CIMGUI_API ImGuiTableSortSpecs*  ImGui_TableGetSortSpecs(void);                       
CIMGUI_API int                   ImGui_TableGetColumnCount(void);                     
CIMGUI_API int                   ImGui_TableGetColumnIndex(void);                     
CIMGUI_API int                   ImGui_TableGetRowIndex(void);                        
CIMGUI_API const char*           ImGui_TableGetColumnName(int column_n );   
CIMGUI_API ImGuiTableColumnFlags ImGui_TableGetColumnFlags(int column_n );  
CIMGUI_API void                  ImGui_TableSetColumnEnabled(int column_n, bool v);   
CIMGUI_API int                   ImGui_TableGetHoveredColumn(void);                   
CIMGUI_API void                  ImGui_TableSetBgColor(ImGuiTableBgTarget target, ImU32 color, int column_n ); 
CIMGUI_API bool ImGui_TabItemButton(const char* label, ImGuiTabItemFlags flags );  
CIMGUI_API bool ImGui_Shortcut(ImGuiKeyChord key_chord, ImGuiInputFlags flags );
struct ImGuiTableSortSpecs_t
{
    const ImGuiTableColumnSortSpecs* Specs;       
    int                              SpecsCount;  
    bool                             SpecsDirty;  
};