generated-out/docking/dear-imgui-raw-docking/cbits/DearImGuiWrappers.h

void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
bool ImGui_VSliderFloat_wrap(const char* label, ImVec2 const* size, float* v, float v_min, float v_max, const char* format, ImGuiSliderFlags flags);