generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw/ImGui.hsc


-- C: bool ImGui::Shortcut(ImGuiKeyChord key_chord, ImGuiInputFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Shortcut"
  imGui_Shortcut :: ImGuiKeyChord -> ImGuiInputFlags -> IO CBool
-- C: void ImGui::ShowAboutWindow(bool* p_open)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ShowAboutWindow"
  imGui_ShowAboutWindow :: (Ptr CBool) -> IO ()
-- C: void ImGui::ShowDebugLogWindow(bool* p_open)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ShowDebugLogWindow"
  imGui_ShowDebugLogWindow :: (Ptr CBool) -> IO ()
-- C: void ImGui::ShowDemoWindow(bool* p_open)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ShowDemoWindow"
  imGui_ShowDemoWindow :: (Ptr CBool) -> IO ()
-- C: void ImGui::ShowFontSelector(const char* label)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ShowFontSelector"
  imGui_ShowFontSelector :: CString -> IO ()
-- C: void ImGui::ShowIDStackToolWindow(bool* p_open)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ShowIDStackToolWindow"
  imGui_ShowIDStackToolWindow :: (Ptr CBool) -> IO ()
-- C: void ImGui::ShowMetricsWindow(bool* p_open)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ShowMetricsWindow"
  imGui_ShowMetricsWindow :: (Ptr CBool) -> IO ()
-- C: void ImGui::ShowStyleEditor(ImGuiStyle* ref)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ShowStyleEditor"
  imGui_ShowStyleEditor :: (Ptr ImGuiStyle) -> IO ()
-- C: bool ImGui::ShowStyleSelector(const char* label)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ShowStyleSelector"
  imGui_ShowStyleSelector :: CString -> IO CBool
-- C: void ImGui::ShowUserGuide()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_ShowUserGuide"
  imGui_ShowUserGuide :: IO ()
-- C: bool ImGui::SliderAngle(const char* label, float* v_rad, float v_degrees_min, float v_degrees_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderAngle"
  imGui_SliderAngle :: CString -> (Ptr CFloat) -> CFloat -> CFloat -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SliderFloat(const char* label, float* v, float v_min, float v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderFloat"
  imGui_SliderFloat :: CString -> (Ptr CFloat) -> CFloat -> CFloat -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SliderFloat2(const char* label, float[2] v, float v_min, float v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderFloat2"
  imGui_SliderFloat2 :: CString -> (Ptr CFloat) -> CFloat -> CFloat -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SliderFloat3(const char* label, float[3] v, float v_min, float v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderFloat3"
  imGui_SliderFloat3 :: CString -> (Ptr CFloat) -> CFloat -> CFloat -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SliderFloat4(const char* label, float[4] v, float v_min, float v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderFloat4"
  imGui_SliderFloat4 :: CString -> (Ptr CFloat) -> CFloat -> CFloat -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SliderInt(const char* label, int* v, int v_min, int v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderInt"
  imGui_SliderInt :: CString -> (Ptr CInt) -> CInt -> CInt -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SliderInt2(const char* label, int[2] v, int v_min, int v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderInt2"
  imGui_SliderInt2 :: CString -> (Ptr CInt) -> CInt -> CInt -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SliderInt3(const char* label, int[3] v, int v_min, int v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderInt3"
  imGui_SliderInt3 :: CString -> (Ptr CInt) -> CInt -> CInt -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SliderInt4(const char* label, int[4] v, int v_min, int v_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderInt4"
  imGui_SliderInt4 :: CString -> (Ptr CInt) -> CInt -> CInt -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SliderScalar(const char* label, ImGuiDataType data_type, void* p_data, const void* p_min, const void* p_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderScalar"
  imGui_SliderScalar :: CString -> ImGuiDataType -> (Ptr ()) -> (Ptr ()) -> (Ptr ()) -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SliderScalarN(const char* label, ImGuiDataType data_type, void* p_data, int components, const void* p_min, const void* p_max, const char* format, ImGuiSliderFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SliderScalarN"
  imGui_SliderScalarN :: CString -> ImGuiDataType -> (Ptr ()) -> CInt -> (Ptr ()) -> (Ptr ()) -> CString -> ImGuiSliderFlags -> IO CBool
-- C: bool ImGui::SmallButton(const char* label)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_SmallButton"
  imGui_SmallButton :: CString -> IO CBool
-- C: void ImGui::Spacing()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Spacing"
  imGui_Spacing :: IO ()
-- C: void ImGui::StyleColorsClassic(ImGuiStyle* dst)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_StyleColorsClassic"
  imGui_StyleColorsClassic :: (Ptr ImGuiStyle) -> IO ()
-- C: void ImGui::StyleColorsDark(ImGuiStyle* dst)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_StyleColorsDark"
  imGui_StyleColorsDark :: (Ptr ImGuiStyle) -> IO ()
-- C: void ImGui::StyleColorsLight(ImGuiStyle* dst)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_StyleColorsLight"
  imGui_StyleColorsLight :: (Ptr ImGuiStyle) -> IO ()
-- C: bool ImGui::TabItemButton(const char* label, ImGuiTabItemFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TabItemButton"
  imGui_TabItemButton :: CString -> ImGuiTabItemFlags -> IO CBool
-- C: void ImGui::TableAngledHeadersRow()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableAngledHeadersRow"
  imGui_TableAngledHeadersRow :: IO ()
-- C: int ImGui::TableGetColumnCount()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableGetColumnCount"
  imGui_TableGetColumnCount :: IO CInt
-- C: ImGuiTableColumnFlags ImGui::TableGetColumnFlags(int column_n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableGetColumnFlags"
  imGui_TableGetColumnFlags :: CInt -> IO ImGuiTableColumnFlags
-- C: int ImGui::TableGetColumnIndex()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableGetColumnIndex"
  imGui_TableGetColumnIndex :: IO CInt
-- C: const char* ImGui::TableGetColumnName(int column_n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableGetColumnName"
  imGui_TableGetColumnName :: CInt -> IO CString
-- C: int ImGui::TableGetHoveredColumn()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableGetHoveredColumn"
  imGui_TableGetHoveredColumn :: IO CInt
-- C: int ImGui::TableGetRowIndex()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableGetRowIndex"
  imGui_TableGetRowIndex :: IO CInt
-- C: ImGuiTableSortSpecs* ImGui::TableGetSortSpecs()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableGetSortSpecs"
  imGui_TableGetSortSpecs :: IO (Ptr ImGuiTableSortSpecs)
-- C: void ImGui::TableHeader(const char* label)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableHeader"
  imGui_TableHeader :: CString -> IO ()
-- C: void ImGui::TableHeadersRow()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableHeadersRow"
  imGui_TableHeadersRow :: IO ()
-- C: bool ImGui::TableNextColumn()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableNextColumn"
  imGui_TableNextColumn :: IO CBool
-- C: void ImGui::TableNextRow(ImGuiTableRowFlags row_flags, float min_row_height)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableNextRow"
  imGui_TableNextRow :: ImGuiTableRowFlags -> CFloat -> IO ()
-- C: void ImGui::TableSetBgColor(ImGuiTableBgTarget target, ImU32 color, int column_n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableSetBgColor"
  imGui_TableSetBgColor :: ImGuiTableBgTarget -> ImU32 -> CInt -> IO ()
-- C: void ImGui::TableSetColumnEnabled(int column_n, bool v)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableSetColumnEnabled"
  imGui_TableSetColumnEnabled :: CInt -> CBool -> IO ()
-- C: bool ImGui::TableSetColumnIndex(int column_n)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableSetColumnIndex"
  imGui_TableSetColumnIndex :: CInt -> IO CBool
-- C: void ImGui::TableSetupColumn(const char* label, ImGuiTableColumnFlags flags, float init_width_or_weight, ImGuiID user_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableSetupColumn"
  imGui_TableSetupColumn :: CString -> ImGuiTableColumnFlags -> CFloat -> ImGuiID -> IO ()
-- C: void ImGui::TableSetupScrollFreeze(int cols, int rows)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TableSetupScrollFreeze"
  imGui_TableSetupScrollFreeze :: CInt -> CInt -> IO ()
-- C: bool ImGui::TextLink(const char* label)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TextLink"
  imGui_TextLink :: CString -> IO CBool
-- C: bool ImGui::TextLinkOpenURL(const char* label, const char* url)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TextLinkOpenURL"
  imGui_TextLinkOpenURL :: CString -> CString -> IO CBool
-- C: void ImGui::TextUnformatted(const char* text, const char* text_end)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TextUnformatted"
  imGui_TextUnformatted :: CString -> CString -> IO ()
-- C: bool ImGui::TreeNode(const char* label)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TreeNode"
  imGui_TreeNode :: CString -> IO CBool
-- C: bool ImGui::TreeNodeEx(const char* label, ImGuiTreeNodeFlags flags)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TreeNodeEx"
  imGui_TreeNodeEx :: CString -> ImGuiTreeNodeFlags -> IO CBool
-- C: bool ImGui::TreeNodeGetOpen(ImGuiID storage_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TreeNodeGetOpen"
  imGui_TreeNodeGetOpen :: ImGuiID -> IO CBool
-- C: void ImGui::TreePop()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TreePop"
  imGui_TreePop :: IO ()
-- C: void ImGui::TreePush(const char* str_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TreePush"
  imGui_TreePush :: CString -> IO ()
-- C: void ImGui::TreePush(const void* ptr_id)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_TreePushPtr"
  imGui_TreePushPtr :: (Ptr ()) -> IO ()
-- C: void ImGui::Unindent(float indent_w)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_Unindent"
  imGui_Unindent :: CFloat -> IO ()
-- C: void ImGui::UpdatePlatformWindows()
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGui_UpdatePlatformWindows"
  imGui_UpdatePlatformWindows :: IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImGui_VSliderFloat_wrap"
  c_imGui_VSliderFloat :: CString -> (Ptr ImVec2) -> (Ptr CFloat) -> CFloat -> CFloat -> CString -> ImGuiSliderFlags -> IO CBool
